
	Endless Tower+
	13412 Naght_Seiger_Twin_Edge	Chance while attacking to pierce enemy defence for 5 seconds.
	13413 Naght_Seiger_Twin_Edge_	Chance while attacking to pierce enemy defence for 5 seconds.
	1185 Violet_Fear		Chance while attacking to pierce enemy defence for 5 seconds.
	2385 Recuvative_Armor		Should trigger HP/SP return with magical kills as well.

=======================
2008/03/04
	* Rev. 12292 Added a slot drooping ninetails. (bugreport:1089) [L0ne_W0lf]
	* Rev. 12291 Corrected Field Manual 100% box. (bugreport:1104) [L0ne_W0lf]
2008/03/03
	* Rev. 12284 Rather large update to the item database. [L0ne_W0lf]
	- Lots of minor updates to sell prices and kRONames, and more.
	- Added several items. ($ephiroth and myself)
2008/02/28
	* Adjusted const.txt's cell type numbers according to recent updates
2008/02/27
	* Added barehanded weapons to Full Adrenaline Rush's list [ultramage]
2008/02/07
	* Rev. 12183 Updated some existing items and added some others. [L0ne_W0lf]
	* Changed NPC_BLEEDING in mob_skill_db to be target not self.
	* Added Event drops to tarou, cramp, martin. (enable in mob_db2)
	* Added new pet: New Year Doll (quest reward) thanks to Yomanda.
	* Corrected Freezing Trap's type to weapon.
	* Changed suiton's element to water.
	* Changed Landmine's trigger area to 0 (1x1, to match its splash range).
	  [Skotlex]
2008/01/25
	* Changed cast time of Napalm Vulcan from 1,7s to 1s. [FlavioJS]
	  Based on X.4 and 11.2 zones
01/09
	* Corrected duration of sphere mines to be 30 secs regardless of skill
	  level. [Skotlex]
12/28
	* Updated MVP drops to 11.2 [Playtester]
	- also increased speed of Lord of the Death
12/26
	* Fixed two bugs in mob_db [Playtester]
12/18
	* Cleaned up a bit the format of skill_db.txt (that comma next to the skill
	  name looks ugly if you ask me)
12/14
	* corrected Option_Xmas value in const.txt [Skotlex]
12/13
	* Rev. 11909 Fixed Big Defense Potion 10ea Box. (was giving small def pot.) [L0ne_W0lf]
12/05